chore(deps): bump spring-boot-starter-parent from 2.1.6.RELEASE to 2.5.6 in /rxjava2-jdbc (#69)
* chore(deps): bump spring-boot-starter-parent in /rxjava2-jdbc

Bumps [spring-boot-starter-parent](https://github.com/spring-projects/spring-boot) from 2.1.6.RELEASE to 2.5.6.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v2.1.6.RELEASE...v2.5.6)

---
updated-dependencies:
- dependency-name: org.springframework.boot:spring-boot-starter-parent
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* fix build issue

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: rajadileepkolli <rajadileepkolli@gmail.com>